logotype height proof

--- a/styles.css
+++ b/styles.css
@@ -8,11 +8,14 @@
   padding: 0, 60px; }
 
 .front-layer {
+  bottom: -100px !important; }
+
+.fix-layer {
   bottom: -400px !important; }
 
 .logo-layer {
   display: block;
-  top: 10vh;
+  top: 5vh;
   height: 90vh !important;
   margin-left: auto;
   margin-right: auto; }
@@ -69,6 +72,9 @@
 #keyart-7 {
   background-image: url("images/layer_7.svg"); }
 
+#keyart-8 {
+  background-image: url("images/layer_8.svg"); }
+
 #keyart-scrim {
   opacity: 0; }
 
@@ -95,6 +101,9 @@
     background-image: url("images/layer_6.svg"); }
 
   #keyart-7 {
-    background-image: url("images/layer_7.svg"); } }
+    background-image: url("images/layer_7.svg"); }
+
+  #keyart-8 {
+    background-image: url("images/layer_8.svg"); } }
 
 /*# sourceMappingURL=styles.css.map */
