--- a/css/loader.css
+++ b/css/loader.css
@@ -5,7 +5,7 @@
   top: 0;
   width: 100%;
   height: 100%;
-  background: #fff;
+  background: #21150a;
   text-align: center;
   z-index: 6001;
 }
@@ -36,7 +36,7 @@
   display: inline-block;
   position: absolute;
   top: 0;
-  background-color: #333;
+  background-color: #ca2b2d;
   border-radius: 100%;
   
   -webkit-animation: sk-bounce 2.0s infinite ease-in-out;
