--- a/css/style.css
+++ b/css/style.css
@@ -536,7 +536,7 @@ div[class*="empty-"] {width: 100%; clear: both;}
 
 .simple-item-style-3 {position: relative; background: #fff; padding: 0 15px;}
 
-.section, .main-title {position: relative; background-color: #21150a;}
+.section, .main-title {position: relative; background-color: #000;}
 .elem-button {position: relative; width: 100%; display: inline-block; padding: 0 15px;}
 .elem-button .page-button {margin: 0 20px 30px 0px; float: left;}
 .form-elements .custom-input-number {margin-right: 30px;}
