--- a/css/style.css
+++ b/css/style.css
@@ -980,7 +980,7 @@ textarea.input-field.sm {height: 125px;}
 /* 06 - FOOTERS */
 /*-------------------------------------------------------------------------------------------------------------------------------*/
 .footer {position: relative;}
-.main-content {position: relative; background: #fedcc8; z-index: 1; overflow: hidden; margin-top: 0px!important;}
+.main-content {position: relative; background: #fedcc8; overflow: hidden; margin-top: 0px!important;}
 .footer-style-1 {background: #181a1c;}
 .footer-style-1 .title {color: #fff;}
 .footer-style-1.type-2 .copyright{background: #2b2b2b;}
@@ -1145,7 +1145,7 @@ body.overflow {overflow: hidden;}
 }
 
 @media (min-width: 991px) {
-	.footer {position: fixed; left: 0px; bottom: 0px; width: 100%; }
+	.footer {position: relative; left: 0px; bottom: 0px; width: 100%; }
     .header-menu > li ul:before {content: ''; position: absolute; left: 0px; top: 1px; width: 20%; height: 100%; background: #181a1c; transition: all 0.45s ease-out; -webkit-transition: all 0.45s ease-out; -ms-transition: all 0.45s ease-out;}
     .header-menu li:hover > ul {visibility: visible; opacity: 1;}
     .header-menu li:hover > ul:before {width: 100%;}
