--- a/css/loader.css
+++ b/css/loader.css
@@ -1,69 +1,39 @@
 .preloader {
   position: fixed;
-  display: flex;  
+  display: flex;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
-  background: #21150a;
+  background: #000;
   text-align: center;
   z-index: 6001;
 }
 
-.preloader:after {
-  content: "";
-  height: 100%;
-  display: inline-block;
-  vertical-align: middle;
-}
-
-.spinner {
+.loader{
   display: flex;
   margin: auto auto;
-  width: 40px;
-  height: 40px;
+  width: 100px;
+  height: 100px;
   position: relative;
   text-align: center;
   vertical-align: middle;
-  
-  -webkit-animation: sk-rotate 2.0s infinite linear;
-  animation: sk-rotate 2.0s infinite linear;
+  animation: gradientChange 1.5s infinite;
 }
 
-.dot1, .dot2 {
-  width: 60%;
-  height: 60%;
-  display: inline-block;
-  position: absolute;
-  top: 0;
-  background-color: #ca2b2d;
-  border-radius: 100%;
-  
-  -webkit-animation: sk-bounce 2.0s infinite ease-in-out;
-  animation: sk-bounce 2.0s infinite ease-in-out;
+@-webkit-keyframes gradientChange {
+  0%, 100% {
+    opacity: 1
+  }
+  50%{
+    opacity: 0.5
+  }
 }
-
-.dot2 {
-  top: auto;
-  bottom: 0;
-  -webkit-animation-delay: -1.0s;
-  animation-delay: -1.0s;
-}
-
-@-webkit-keyframes sk-rotate { 100% { -webkit-transform: rotate(360deg) }}
-@keyframes sk-rotate { 100% { transform: rotate(360deg); -webkit-transform: rotate(360deg) }}
-
-@-webkit-keyframes sk-bounce {
-  0%, 100% { -webkit-transform: scale(0.0) }
-  50% { -webkit-transform: scale(1.0) }
-}
-
-@keyframes sk-bounce {
-  0%, 100% { 
-    transform: scale(0.0);
-    -webkit-transform: scale(0.0);
-  } 50% { 
-    transform: scale(1.0);
-    -webkit-transform: scale(1.0);
+@keyframes gradientChange {
+  0%, 100% {
+    opacity: 1
+  }
+  50%{
+    opacity: 0.1
   }
 }
