--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,7 @@
   height: 100vh !important;
   margin-left: auto;
   margin-right: auto;
+  background-position: top !important;
 }
 
 .op-4 {
@@ -141,4 +142,17 @@
   }
 }
 
+.page-style-7 h4, .q-text .qq {
+  color: #898989;
+}
+
+.page-style-7 h5 {
+  color: #ca2b2d;
+}
+
+.black-overlay {
+  height: 100%;
+  opacity: 0.6;
+  background-color: #000;
+}
 /*# sourceMappingURL=styles.css.map */
