skrollr mobile support | allema corrected

--- a/css/style.css
+++ b/css/style.css
@@ -13,8 +13,8 @@
 @import url('https://fonts.googleapis.com/css?family=Euphoria+Script');
 @import url('https://fonts.googleapis.com/css?family=Norican');
 @import url('https://fonts.googleapis.com/css?family=Lato:400,700');
-@import url('https://fonts.googleapis.com/css?family=Montserrat');
-@import url('../fonts/Allema.ttf');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700');
+@font-face { font-family: Allema; src: url('/fonts/Allema.ttf'); } 
 
 
 /*-------------------------------------------------------------------------------------------------------------------------------*/
