--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@
 @import url('https://fonts.googleapis.com/css?family=Norican');
 @import url('https://fonts.googleapis.com/css?family=Lato:400,700');
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,700');
-@font-face { font-family: Allema; src: url('fonts/Allema.ttf'); } 
+@font-face { font-family: Allema; src: url('fonts/Allema.ttf') format('truetype'); } 
 
 
 /*-------------------------------------------------------------------------------------------------------------------------------*/
