--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
+@font-face {
+  font-family: 'Allema';
+  src: url('../fonts/Allema.woff2') format('woff2'),
+      url('../fonts/Allema.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
 @import url('https://fonts.googleapis.com/css?family=Bitter:400,400i');
 @import url('https://fonts.googleapis.com/css?family=Ubuntu:300,400,700');
 @import url('https://fonts.googleapis.com/css?family=Great+Vibes');
@@ -14,8 +22,6 @@
 @import url('https://fonts.googleapis.com/css?family=Norican');
 @import url('https://fonts.googleapis.com/css?family=Lato:400,700');
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,700');
-@font-face { font-family: Allema; src: url('fonts/Allema.ttf') format('truetype'); } 
-
 
 /*-------------------------------------------------------------------------------------------------------------------------------*/
 /* 01 - RESET */
